# lpm

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  lpm.cabal  semver.nix
src/: Main.hs
src/LPM/: DependencyTree.hs  Info.hs  Package.hs
