cabal-version: 1.12

name:           lpm
version:        1.0.0
build-type:     Simple

executable lpm
  main-is: Main.hs
  other-modules:
      LPM.Info
      LPM.Package
      LPM.DependencyTree
      Paths_lpm
  hs-source-dirs:
      src
  ghc-options: -Wall -Wno-name-shadowing -ferror-spans
  build-depends:
      aeson
    , base >=4.7
    , bytestring
    , containers
    , cryptohash-sha1
    , directory
    , http-client
    , http-conduit
    , text
    , mtl
    , transformers
    , attoparsec
    , deepseq
    , hashable
    , semver >=0.4.0.1
  default-language: Haskell2010
